--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta name="google" content="notranslate" />
+    <meta http-equiv="Content-Language" content="en" />
 
     <!-- bootstrap icons -->
     <link
